# claude-remote-collector

./: .gitignore  README.md  pyproject.toml
scripts/: claude-wrapper.bash  claude-wrapper.fish  claude-wrapper.zsh  install-wrapper.sh
src/collector/: __init__.py  capture.py  cli.py  config.py  notifier.py  setup.py  storage.py  wrapper.py
src/collector/notifiers/: ntfy.py  telegram.py  webhook.py
tests/: test_capture.py  test_cli.py  test_config.py  test_notifier.py  test_setup.py  test_storage.py  test_wrapper.py
