[project]
name = "claude-remote-collector"
version = "0.1.0"
description = "Automatically collect Claude Code remote session links"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
claude-remote-collector = "collector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collector"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
